--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "classnames": "^2.3.2",
     "concurrently": "^8.2.2",
+    "css-modules": "^0.3.0",
     "file-loader": "^6.2.0",
     "json-server": "^0.17.4",
+    "postcss-loader": "^7.3.3",
+    "postcss-modules-values": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
